--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>Document</title>
+        <title>JS Primer</title>
     </head>
     <body>
         <h1 id="message" style="font-family: sans-serif;"></h1>
-        <script src="StartHere.js"></script>
+        <script src="main.js" type="module"></script>
     </body>
 </html>
