--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
     </head>
     <body>
         <h1 id="message" style="font-family: sans-serif;"></h1>
-        <script src="main.js" type="module"></script>
+        <script src="index.js" type="module"></script>
     </body>
 </html>
