--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>JS Primer</title>
-    </head>
-    <body>
-        <h1 id="message" style="font-family: sans-serif;"></h1>
-        <script src="index.js" type="module"></script>
-    </body>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>JS Primer</title>
+    <link rel="icon" href="/src/favicon.ico" type="image/x-icon">
+</head>
+
+<body>
+    <h1 id="message" style="font-family: sans-serif;"></h1>
+    <script src="index.js" type="module"></script>
+</body>
+
 </html>
